--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.25",
     "expo": "^51.0.0",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.9",
+    "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.1",
@@ -22,6 +24,7 @@
     "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0"
   },
