--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/clerk-expo": "^2.2.25",
     "expo": "^51.0.0",
     "expo-constants": "~16.0.1",
+    "expo-image-picker": "^15.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.9",
     "expo-secure-store": "^13.0.2",
