--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-otp-textinput": "^1.1.6",
     "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
