--- a/app.json
+++ b/app.json
@@ -22,6 +22,9 @@
         "projectId": "a4ded030-ff21-4d2d-9e5d-84dd6d5cf20d"
       }
     },
-    "owner": "syv"
+    "owner": "syv",
+    "android": {
+      "package": "com.savy.savy" 
+    }
   }
 }
