--- a/eas.json
+++ b/eas.json
@@ -16,7 +16,8 @@
   
       "production": {
         "android": {
-          "buildType": "apk"
+          "buildType": "apk",
+          "gradleCommand": ":app:assembleRelease"
         },
         "distribution": "store",
         "env": {
