--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.25",
+    "@react-navigation/native": "^6.1.18",
     "expo": "^51.0.0",
     "expo-constants": "~16.0.1",
     "expo-image-picker": "^15.0.7",
@@ -19,6 +20,7 @@
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,8 +33,7 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.0",
-    "expo-system-ui": "~3.0.7"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
