--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.25",
     "@react-navigation/native": "^6.1.18",
-    "expo": "^51.0.0",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.1",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
