--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@clerk/clerk-expo": "^2.2.25",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.38",
-
     "expo-constants": "~16.0.1",
+    "expo-haptics": "^13.0.1",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.1.6",
