--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/clerk-expo": "^2.2.25",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.38",
+    "expo-av": "^14.0.7",
+    "expo-camera": "^15.0.16",
     "expo-constants": "~16.0.1",
     "expo-document-picker": "^12.0.2",
     "expo-haptics": "^13.0.1",
