--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.25",
     "@react-navigation/native": "^6.1.18",
+    "axios": "^1.7.7",
     "cookie": "^0.7.2",
     "expo": "~51.0.38",
     "expo-av": "^14.0.7",
