--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -31,6 +31,7 @@ et-xmlfile==1.1.0
 executing==1.2.0
 fastapi==0.112.2
 fastjsonschema==2.18.0
+ffmpeg-python==0.2.0
 Flask==3.0.0
 Flask-Cors==4.0.0
 fonttools==4.42.1
