--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "cookie": "^0.7.2",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-av": "^14.0.7",
     "expo-camera": "^15.0.16",
     "expo-constants": "~16.0.1",
@@ -22,9 +22,9 @@
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.9",
+    "expo-router": "~3.5.24",
     "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "^0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "i": "^0.3.7",
