--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.24",
     "expo-secure-store": "^13.0.2",
+    "expo-speech": "^12.0.2",
     "expo-splash-screen": "^0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gifted-charts": "^1.4.47",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.1.6",
