--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.10",
     "send": "^0.19.1",
     "tailwindcss": "^3.4.0"
