--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cookie": "^0.7.2",
     "expo": "~51.0.39",
     "expo-av": "^14.0.7",
-    "expo-camera": "^15.0.16",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.1",
     "expo-document-picker": "^12.0.2",
     "expo-haptics": "^13.0.1",
