--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.25",
+    "@mrakesh0608/react-native-loading-dots": "^1.0.9",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "cookie": "^0.7.2",
