--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "expo-document-picker": "^12.0.2",
     "expo-haptics": "^13.0.1",
     "expo-image-picker": "^15.0.7",
-    "expo-linear-gradient": "^13.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.24",
     "expo-secure-store": "^13.0.2",
@@ -43,6 +43,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.10",
