--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-web": "~0.19.10",
     "send": "^0.19.1",
     "tailwindcss": "^3.4.0",
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
