--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,71 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+async-timeout==4.0.3
+attrs==24.2.0
+black==24.10.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
 cmake==3.26.4
+cryptography==44.0.0
+Deprecated==1.2.14
+deprecation==2.1.0
+distro==1.9.0
 dlib-bin==19.24.6
+exceptiongroup==1.2.2
 fastapi==0.115.4
 ffmpeg-python==0.2.0
+frozenlist==1.5.0
+future==1.0.0
+gotrue==2.10.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.6
+httpx==0.27.2
+hyperframe==6.0.1
+idna==3.10
+jiter==0.7.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+numpy==2.0.2
 openai==1.54.3
 opencv-python-headless==4.10.0.84
+packaging==24.1
+pathspec==0.12.1
+platformdirs==4.3.6
+postgrest==0.18.0
+propcache==0.2.0
+pycparser==2.22
 pydantic==2.9.2
+pydantic_core==2.23.4
+pydub==0.25.1
+PyJWT==2.10.1
 pypdf==5.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
+realtime==2.0.6
+requests==2.31.0
+six==1.16.0
+sniffio==1.3.1
+starlette==0.41.2
+storage3==0.9.0
+StrEnum==0.4.15
 supabase==2.10.0
+supafunc==0.7.0
 svix==1.39.0
+tomli==2.1.0
+tqdm==4.67.0
+types-Deprecated==1.2.9.20240311
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.32.0
+websockets==13.1
+wrapt==1.16.0
+yarl==1.17.1
