--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,8 @@ anyio==4.6.2.post1
 async-timeout==4.0.3
 attrs==24.2.0
 black==24.10.0
+boto3==1.35.81
+botocore==1.35.81
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -30,6 +32,7 @@ httpx==0.27.2
 hyperframe==6.0.1
 idna==3.10
 jiter==0.7.0
+jmespath==1.0.1
 multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==2.0.2
@@ -51,6 +54,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.17
 realtime==2.0.6
 requests==2.32.3
+s3transfer==0.10.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.41.2
@@ -64,7 +68,7 @@ tqdm==4.67.0
 types-Deprecated==1.2.9.20240311
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
-urllib3==2.2.3
+urllib3==1.26.20
 uvicorn==0.32.0
 websockets==13.1
 wrapt==1.16.0
