--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-av": "^14.0.7",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.1",
+    "expo-dev-client": "~4.0.29",
     "expo-document-picker": "^12.0.2",
     "expo-gl": "~14.0.2",
     "expo-haptics": "^13.0.1",
@@ -47,6 +48,7 @@
     "react-native-otp-textinput": "^1.1.6",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
@@ -55,8 +57,7 @@
     "react-native-web": "~0.19.10",
     "send": "^0.19.1",
     "tailwindcss": "^3.4.0",
-    "three": "^0.171.0",
-    "expo-dev-client": "~4.0.29"
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
