--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.25",
@@ -36,6 +43,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "i": "^0.3.7",
+    "jest": "^29.4.0",
+    "jest-expo": "~51.0.4",
     "nativewind": "^4.0.1",
     "r3f-native-orbitcontrols": "^1.0.12",
     "react": "18.2.0",
@@ -55,12 +64,14 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.10",
+    "react-test-renderer": "^18.2.0",
     "send": "^0.19.1",
     "tailwindcss": "^3.4.0",
     "three": "^0.171.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.2.45",
     "typescript": "~5.3.3"
   },
