--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-test-renderer": "^18.2.0",
     "send": "^0.19.1",
     "tailwindcss": "^3.4.0",
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
