--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -31,6 +31,7 @@ httpcore==1.0.6
 httpx==0.27.2
 hyperframe==6.0.1
 idna==3.10
+iniconfig==2.0.0
 jiter==0.7.0
 jmespath==1.0.1
 multidict==6.1.0
@@ -40,7 +41,9 @@ openai==1.54.3
 opencv-python-headless==4.10.0.84
 packaging==24.1
 pathspec==0.12.1
+pillow==11.1.0
 platformdirs==4.3.6
+pluggy==1.5.0
 postgrest==0.18.0
 propcache==0.2.0
 pycparser==2.22
@@ -49,6 +52,10 @@ pydantic_core==2.23.4
 pydub==0.25.1
 PyJWT==2.10.1
 pypdf==5.1.0
+pytesseract==0.3.13
+pytest==8.3.4
+pytest-asyncio==0.25.1
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.17
