--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.47",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
@@ -61,14 +62,13 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-toast-message": "^2.2.1",
+    "react-native-toast-message": "^2.3.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.10",
     "react-test-renderer": "^18.2.0",
     "send": "^0.19.1",
     "tailwindcss": "^3.4.0",
-    "three": "^0.171.0",
-    "react-native-gesture-handler": "~2.16.1"
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
